@@ -7,3 +7,7 @@
 * Added file format support: "vamas-iso14976 file". However, the MAPPING mode file (which is a 2-ary function, (x,y)->z) is not handled. 
 * To simplify the code, add several helper functions. e.g. read_line_int()
 
+13:13 2007-6-29 version 310
+* Re-write some of the code in load_vamas_file
+* Change existing code to handle the "endian issue" and the "fixed-size int data type issue".
+For the 1st issue, use endian.hpp to determine the endian of the machine, then exchange the bytes manually if necessary. For the 2nd issue, use fixed-size data types defined in <boost/cstdint.hpp> instead of raw types.
